--- a/pages/index.html
+++ b/pages/index.html
@@ -53,6 +53,45 @@
             font-size: 1.5rem;
             color: #666;
             font-weight: 400;
+            margin-bottom: 3rem;
+        }
+
+        .data-sources {
+            margin-top: 3rem;
+            padding-top: 2rem;
+            border-top: 1px solid #e0e0e0;
+        }
+
+        .data-sources h2 {
+            font-size: 1.2rem;
+            color: #444;
+            margin-bottom: 0.75rem;
+            font-weight: 600;
+        }
+
+        .data-sources p {
+            font-size: 0.95rem;
+            color: #666;
+            margin-bottom: 1rem;
+            line-height: 1.6;
+        }
+
+        .links {
+            display: flex;
+            gap: 1.5rem;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .links a {
+            color: #E90038;
+            text-decoration: none;
+            font-size: 0.95rem;
+            font-weight: 500;
+        }
+
+        .links a:hover {
+            text-decoration: underline;
         }
 
         @media (max-width: 768px) {
@@ -67,6 +106,19 @@
             .subtitle {
                 font-size: 1.2rem;
             }
+
+            .data-sources h2 {
+                font-size: 1.1rem;
+            }
+
+            .data-sources p {
+                font-size: 0.9rem;
+            }
+
+            .links {
+                flex-direction: column;
+                gap: 0.75rem;
+            }
         }
     </style>
 </head>
@@ -78,6 +130,15 @@
 
         <h1>Jisho</h1>
         <p class="subtitle">Instantly look up Japanese words, explore kanji, and get AI-powered explanations—all offline.</p>
+
+        <div class="data-sources">
+            <h2>Data Sources</h2>
+            <p>Dictionary data sourced from JMdict and KANJIDIC projects, provided by the Electronic Dictionary Research and Development Group.</p>
+            <div class="links">
+                <a href="https://www.edrdg.org/wiki/index.php/JMdict-EDICT_Dictionary_Project" target="_blank" rel="noopener noreferrer">JMdict Project</a>
+                <a href="https://www.edrdg.org/wiki/index.php/KANJIDIC_Project" target="_blank" rel="noopener noreferrer">KANJIDIC Project</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
