--- a/pages/index.html
+++ b/pages/index.html
@@ -139,6 +139,11 @@
                 <a href="https://www.edrdg.org/wiki/index.php/KANJIDIC_Project" target="_blank" rel="noopener noreferrer">KANJIDIC Project</a>
             </div>
         </div>
+
+        <div class="data-sources">
+            <h2>AI Features</h2>
+            <p>Premium AI-powered explanations are provided by third-party AI providers and may contain errors or inaccuracies. Users should verify important information with authoritative sources.</p>
+        </div>
     </div>
 </body>
 </html>
