--- a/pages/terms.html
+++ b/pages/terms.html
@@ -84,7 +84,7 @@
 <body>
     <div class="container">
         <h1>Terms of Service</h1>
-        <p class="last-updated">Last updated: October 12, 2025</p>
+        <p class="last-updated">Last updated: October 13, 2025</p>
 
         <h2>Agreement to Terms</h2>
         <p>By accessing and using the Jisho mobile application, you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, you may not use the app.</p>
@@ -110,14 +110,44 @@
             <li>Attempt to gain unauthorized access to any part of the application</li>
         </ul>
 
-        <h2>AI Features</h2>
-        <p>When using AI-powered features:</p>
+        <h2>AI Features and Premium Services</h2>
+        <p>Jisho offers AI-powered features, including explanations, translations, and interactive chat functionality. By using these features, you acknowledge and agree to the following:</p>
+
+        <h3 style="font-size: 1.25rem; margin-top: 1rem; margin-bottom: 0.75rem; font-weight: 600;">Third-Party AI Providers</h3>
+        <p>Premium AI features are provided through third-party artificial intelligence services. These services are independent from Jisho, and we do not control the output or accuracy of AI-generated content. The AI providers may have their own terms of service and privacy policies that apply to your use of these features.</p>
+
+        <h3 style="font-size: 1.25rem; margin-top: 1rem; margin-bottom: 0.75rem; font-weight: 600;">No Warranty of Accuracy</h3>
+        <p>AI-generated content, including but not limited to explanations, translations, pronunciation guides, and conversational responses, may contain errors, inaccuracies, or misleading information. Jisho makes no representations or warranties regarding the accuracy, completeness, reliability, or suitability of AI-generated content.</p>
+
+        <h3 style="font-size: 1.25rem; margin-top: 1rem; margin-bottom: 0.75rem; font-weight: 600;">Educational and Informational Purposes Only</h3>
+        <p>All AI features are provided for educational and informational purposes only. They should not be relied upon for:</p>
         <ul>
-            <li>AI-generated explanations are provided for educational purposes only</li>
-            <li>The accuracy of AI responses is not guaranteed</li>
-            <li>You are responsible for verifying information from AI features</li>
-            <li>AI features may be subject to additional terms from third-party providers</li>
+            <li>Professional translation or interpretation services</li>
+            <li>Academic or official documentation</li>
+            <li>Business, legal, or medical contexts</li>
+            <li>Any situation where accuracy is critical or consequences of errors could be significant</li>
         </ul>
+
+        <h3 style="font-size: 1.25rem; margin-top: 1rem; margin-bottom: 0.75rem; font-weight: 600;">User Responsibility</h3>
+        <p>You are solely responsible for:</p>
+        <ul>
+            <li>Verifying the accuracy of AI-generated information with authoritative sources</li>
+            <li>Evaluating the appropriateness of AI responses for your specific use case</li>
+            <li>Any decisions or actions taken based on AI-generated content</li>
+            <li>Understanding the limitations of AI technology</li>
+        </ul>
+
+        <h3 style="font-size: 1.25rem; margin-top: 1rem; margin-bottom: 0.75rem; font-weight: 600;">Limitation of Liability for AI Content</h3>
+        <p>To the maximum extent permitted by law, Jisho and its third-party AI providers shall not be liable for any damages, losses, or consequences arising from:</p>
+        <ul>
+            <li>Errors, inaccuracies, or omissions in AI-generated content</li>
+            <li>Reliance on AI-generated information</li>
+            <li>Unavailability or interruption of AI services</li>
+            <li>Changes to AI models or capabilities</li>
+        </ul>
+
+        <h3 style="font-size: 1.25rem; margin-top: 1rem; margin-bottom: 0.75rem; font-weight: 600;">Premium Subscriptions</h3>
+        <p>Certain AI features require a premium subscription. Subscription terms, pricing, and available features may change at any time. Subscriptions are managed through the applicable app store and are subject to their terms and conditions.</p>
 
         <h2>Intellectual Property</h2>
         <p>The application design, code, and original content (excluding dictionary data covered under separate licenses) are the property of Jisho and are protected by copyright laws.</p>
